<resources>
    <string name="app_name">HappyShop</string>
    <string name="loading">Loading...</string>
    <string name="shop">Shop</string>
    <string name="card">card</string>
    <string name="total">Total: </string>
    <string name="msg_no_connection">No Internet Connection!</string>
    <string name="msg_error_server">Error to connect with server!</string>
    <string name="msg_no_more_data">No more data to show!</string>
    <string name="msg_add_item">Do you want to add this item ?</string>
    <string name="confirm">CONFIRM</string>
    <string name="delete">Delete</string>
    <string name="title_activity_card_confirm">Card Confirmation</string>
    <string name="billing_information">Billing Information *</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="email">Email</string>
    <string name="phone">Phone*</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="company">Company</string>
    <string name="order_num">Order N°: </string>
    <string name="order_no_notes">This Order doesn\'t have notes</string>
    <string name="order_history">Order History</string>
    <string name="qte">Qte.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="date_of_creation">Date of Creation: </string>
    <string name="order_info">Order Info</string>
    <string name="order_status">Order Status: </string>
    <string name="order_notes">Notes: </string>
    <string name="reorder">Re-Order</string>
    <string name="items"> ITEM(S)</string>
    <string name="order_not_found">Order not found.</string>
    <string name="order_is_empty">Order is empty</string>
    <string name="no_order_found">No Order found</string>
    <string name="pending">Pending</string>
    <string name="processing">Processing</string>
    <string name="onhold">On-Hold</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="refunded">Refunded</string>
    <string name="failed">Failed</string>
    <string name="trash">Trash</string>
    <string name="delete_order">Delete Order</string>
    <string name="delete_order_prompt">Do you want to delete this Order?</string>
    <string name="cannot_delete_order">Sorry this Order cannot be deleted.</string>
    <string name="missing_order">Missing Order</string>
    <string name="order_number_not_found">Could not found Order Number</string>
    <string name="invalid_info">Invalid Information</string>
    <string name="prompt_provide_info">Please provide your First and Last Name and a phone number.</string>
    <string name="card_empty">Card Empty</string>
    <string name="card_is_empty">Card is Empty.</string>
    <string name="copy_billing_info">Copy Billing Info</string>
    <string name="copy_billing_info_prompt">Do you want to copy Billing Info?</string>
    <string name="insufficient_quantity">Insufficient quantity in Stock.</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_prompt">Do you want to delete this item?</string>
    <string name="request_permission">Request Permission</string>
    <string name="request_permission_prompt">GPS Location permission required.</string>
    <string name="no_order">No Order</string>
    <string name="order_history_empty">Order History is Empty</string>
    <string name="error">Error</string>
    <string name="order_opened">Order Opened</string>
    <string name="order_number_already_opened">Order N°: %d is already open.</string>
    <string name="creating_order">Creating a new Order…</string>
    <string name="card_validated">Card validated.</string>
    <string name="delete_order_history_title">Delete Order History</string>
    <string name="delete_order_history_prompt">Do you want to delete this Order History?</string>
    <string name="loading_notes_for_order_id">Loading notes for Order N°:%d ...</string>
    <string name="edit_line_item">Edit :</string>
</resources>
