<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@color/demo_light_transparent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/img_holder" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Product Name"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_weight="4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="2"
            android:text="0"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/msg_add_item"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvQte"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/qte" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="30dp"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:background="@color/colorDivider"
            android:text="-"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etQte"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:textSize="18sp"
            android:text="1" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="30dp"
            android:layout_height="32dp"
            android:background="@color/colorDivider"
            android:text="+"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/demo_light_transparent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_danger"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textColor="@color/colorTextButtons"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_success"
            android:text="@string/add_to_cart"
            android:layout_weight="1"
            android:textColor="@color/colorTextButtons"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>